--- a/EsercitazioneIUM/app/src/main/AndroidManifest.xml
+++ b/EsercitazioneIUM/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.EsercitazioneEsame"
         tools:targetApi="31">
         <activity
+            android:name=".PasswordActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EliminaAccountActivity"
+            android:exported="false" />
+        <activity
             android:name=".MessaggioRegistrationeActivity"
             android:exported="false" />
         <activity
